responsive for mobile

--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -31,6 +31,10 @@
         position: relative;
     }
 
+
+    .contact-form-wrapper{
+        margin: 30px;
+    }
 }
 .map-container {
     padding: 0px;
