--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -15,3 +15,11 @@
 app-portfolio-card{
     cursor: pointer;
 }
+
+
+.mobile.portfolio{
+    .portfolio-divs{
+        display: block;
+        margin: 40px;
+    }
+}
