--- a/src/app/we-are-home/we-are-home.component.html
+++ b/src/app/we-are-home/we-are-home.component.html
@@ -16,6 +16,6 @@
             hospitality, Oil & Gas Rigs and Aviation Industry.</p>
     </div>
 </div>
-<div class="we-are-right-img">
+<div class="we-are-right-img" [ngClass]="{'mobile':isMobile, 'container':isMobile}" >
     <img [@fadeInFromRight] src="../../assets/we-are-home-img.svg" alt="wearehom">
 </div>
