--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -20,10 +20,12 @@
     .we-are-cards {
         display: flex;
         height: 100vh;
-        .card1{
+
+        .card1 {
             flex: 1;
             margin-right: 50px;
         }
+
         .card2 {
             flex: 1;
         }
@@ -37,7 +39,20 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: url(../../assets/lines.svg) center / cover; 
-    z-index: -1; 
-    opacity: 0.2; 
+    background: url(../../assets/lines.svg) center / cover;
+    z-index: -1;
+    opacity: 0.2;
+}
+
+.about.mobile {
+    .we-are-cards {
+        display: block;
+
+        .card1,
+        .card2 {
+            width: 100%;
+            margin: 10px 10px 20px 0px;
+        }
+    }
+
 }
