--- a/src/app/clients/clients.component.scss
+++ b/src/app/clients/clients.component.scss
@@ -41,3 +41,18 @@
 
     }
 }
+
+.clients.mobile{
+    h1.black{
+        font-weight: 700;
+        font-size: $h3-font;
+        line-height: 27px;
+    }
+    .clients-logos {
+        .logo-img {
+            img{
+                width: 80%;
+            }
+        }
+    }
+}
