--- a/src/app/counter-card/counter-card.component.scss
+++ b/src/app/counter-card/counter-card.component.scss
@@ -15,3 +15,16 @@
 
     }
 }
+
+.counter-card.mobile{
+    .col-counter-num{
+        font-weight: 600;
+        line-height: 15px;
+        font-size: $p-portfolio;
+    }
+    .col-counter-desc{
+        font-size: $sm-f;
+        font-weight: 500;
+        line-height: 14px;
+    }
+}
