--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -80,25 +80,39 @@
     .poster-container {
         margin: 0px !important;
     }
-    .breadcrumb{
+
+    .breadcrumb {
         font-size: $p-font;
         line-height: 17px;
         font-weight: 600;
     }
 
-    .first-bg{
-        h1{
+    .first-bg {
+        h1 {
             font-weight: 700;
             font-size: $h3-font;
             line-height: 23px;
         }
     }
 
-    .we-are-div{
-        app-we-are-home{
-             flex-direction: column;
+    .second-bg {
+        h1.grey {
+            font-weight: 700;
+            font-size: $md-font-p !important;
+            line-height: 21px;
         }
-       
+    }
+
+    .we-are-div {
+        app-we-are-home {
+            flex-direction: column;
+        }
+    }
+
+    .fifth-bg {
+        .media {
+            margin: 10px;
+        }
     }
 
 }
