--- a/src/app/mission-slider/mission-slider.component.html
+++ b/src/app/mission-slider/mission-slider.component.html
@@ -1,4 +1,4 @@
-<div  [ngClass]="{'mobile':isMobile}" >
+<div  class="mission-card" [ngClass]="{'mobile':isMobile}" >
     <!-- [@fadeInFromTop2] -->
     <owl-carousel-o class="container" [options]="customOptions">
         <ng-container *ngFor="let slide of slides; let i = index;">
