--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -11,8 +11,8 @@
             </div>
         </div>
     </div>
-    <div class="spacer-div"></div>
-    <p class="overview-p" [@slideFromTop]>
+    <div class="spacer-div" *ngIf="!isMobile"></div>
+    <p class="overview-p" [@slideFromTop] [ngClass]="{'mobile': isMobile}">
         {{pageOverviewText}}
     </p>
 </div>
