--- a/src/app/portfolio-detail-card/portfolio-detail-card.component.html
+++ b/src/app/portfolio-detail-card/portfolio-detail-card.component.html
@@ -1,6 +1,7 @@
 <div class="container portfolio-detail-card"  [ngClass]="{'mobile':isMobile}" >
-    <div class="image-side">
+    <div class="image-side" [@fadeInFromLeft]>
         <img class="image-shadow" alt="img" src="../../assets/portfolio-card.svg">
+        <div class="shadow-box"></div>
     </div>
     <div class="text-side">
         <div>
@@ -23,12 +24,14 @@
                 generates extra value.
             </p>
         </div>
-        <div class="d-flex" [@fadeInFromTop1]>
+        <div class="d-flex contact-button" [@fadeInFromTop1]>
+            <div class="spacer-div"></div>
             <div class="contact-btn-col">
                 <button type="submit" class="btn btn-primary">
                     MILAYAENERGY.COM
                     <i class="bi bi-arrow-up-right"></i>
                 </button>
+                <div class="spacer-div"></div>
             </div>
             <div class="contact-details">
                 <div class="d-flex">
