--- a/src/app/portfolio-details/portfolio-details.component.html
+++ b/src/app/portfolio-details/portfolio-details.component.html
@@ -6,7 +6,7 @@
 <div class="spacer-div"></div>
 
 <app-portfolio-slider></app-portfolio-slider>
-<div class="spacer-div"></div>
+<div class="spacer-div" *ngIf="!isMobile"></div>
 
 
 <app-footer>    </app-footer>
