--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,7 +1,7 @@
-
-<div class="container portfolio" [ngClass]="{'mobile':isMobile}" >
-        <app-overview [pageTitle]="'Latest Portfolio'"  [pageOverviewText]="'Consulting is a long-term investment in your goal’s future.'"></app-overview>
-    <div class="spacer-div"></div>
+<div class="container portfolio" [ngClass]="{'mobile':isMobile}">
+    <app-overview [pageTitle]="'Latest Portfolio'"
+        [pageOverviewText]="'Consulting is a long-term investment in your goal’s future.'"></app-overview>
+    <div class="spacer-div" *ngIf="!isMobile"></div>
     <div class="portfolio-divs">
         <div class="spacer-div"></div>
         <app-portfolio-card [imageWay]="'left'"></app-portfolio-card>
@@ -11,4 +11,4 @@
     </div>
 </div>
 
-<app-footer>    </app-footer>
+<app-footer> </app-footer>
