--- a/src/app/we-are-card/we-are-card.component.html
+++ b/src/app/we-are-card/we-are-card.component.html
@@ -1,8 +1,8 @@
-<div class="container weare row"  [ngClass]="{'mobile':isMobile}" >
-    <div class="col">
+<div class="container weare"  [ngClass]="{'mobile':isMobile}" >
+    <div class="img-div">
         <img class="imgweare" alt="weare" src="../../assets/we-are-img.svg" [@enterFromLeft] >
     </div>
-    <div class="col details-div">
+    <div class=" details-div">
         <div class="tit-div">
             <div [@fadeInFromTop2]>
                 <img class="rect" src="./../../assets/Rectangle-blue.svg" alt="rectangle">
