--- a/src/app/what-we-do-card-2/what-we-do-card-2.component.scss
+++ b/src/app/what-we-do-card-2/what-we-do-card-2.component.scss
@@ -40,4 +40,9 @@
 .mobile.what-we-do-card2{
     background: none;
     border: none;
+    .top-right-img{
+        img{
+            width: 50%;
+        }
+    }
 }
