--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -19,7 +19,7 @@
 
     <div class="contact-form-wrapper">
         <app-contact-form></app-contact-form>
-        <div class="spacer-div"></div>
+        <div class="spacer-div" *ngIf="!isMobile"></div>
         <div class="map-container container">
             <app-contact-map></app-contact-map>
         </div>
