--- a/src/app/overview/overview.component.scss
+++ b/src/app/overview/overview.component.scss
@@ -61,6 +61,7 @@
     font-size: $p-font-sm !important;
     font-weight: 600;
     line-height: 18px;
+    text-align: center;
 }
 .overview{
     .mobile{
