--- a/src/app/portfolio-card/portfolio-card.component.html
+++ b/src/app/portfolio-card/portfolio-card.component.html
@@ -10,7 +10,7 @@
     </div>
 </div>
 
-<div class="spacer-div"></div>
+<div class="spacer-div" *ngIf="!isMobile"></div>
 <div class="portfolio-card left-card" *ngIf="imageWay == 'left' && isMobile" [@slideFromLeft]  (click)="navigateToDetailsPage(1)"   [ngClass]="{'mobile':isMobile}">
     <div class="left">
         <div class="image-side">
@@ -25,7 +25,7 @@
 
 <!--------------------------- another way RIGHT ----------------------------------------- -->
 
-<div class="spacer-div"></div>
+<div class="spacer-div" *ngIf="!isMobile"></div>
 
 <div class="portfolio-card right-card" *ngIf="imageWay == 'left'  && !isMobile" [@slideFromRight]  (click)="navigateToDetailsPage(1)"   [ngClass]="{'mobile':isMobile}" >
     <div class="right">
@@ -40,7 +40,7 @@
 </div>
 
 
-<div class="spacer-div"></div>
+<div class="spacer-div" *ngIf="!isMobile"></div>
 
 <div class="portfolio-card left-card" *ngIf="imageWay == 'left' && !isMobile" [@slideFromLeft]  (click)="navigateToDetailsPage(1)"   [ngClass]="{'mobile':isMobile}" >
     <div class="left">
@@ -54,7 +54,7 @@
 </div>
 
 
-<div class="spacer-div"></div>
+<div class="spacer-div" *ngIf="!isMobile"></div>
 
 <div class="portfolio-card right-card" *ngIf="imageWay == 'left'  && !isMobile" [@slideFromRight]  (click)="navigateToDetailsPage(1)" >
     <div class="right">
