--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,13 @@
+
+
 <div class="home"  [ngClass]="{'mobile':isMobile}" >
     <div class="first-bg">
+       
+        <!-- <app-mobile-navbar *ngIf="isMobile"></app-mobile-navbar> -->
+
         <div class="poster-container">
             <div class="small-spacer-div" *ngIf="!isMobile"></div>
+            <!-- <app-mobile-navbar *ngIf="isMobile"  [isHome]="true" ></app-mobile-navbar> -->
             <app-main-poster></app-main-poster>
             <div class="spacer-div"></div>
         </div>
