--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -6,9 +6,12 @@
     .first-bg {
         background: $light-grey;
         overflow: hidden;
+        position: relative;
+        
     }
 
     .second-bg {
+        position: relative;
         background: $black url(../../../assets/background-squares.svg ) center / cover;
         padding-top: 50px;
 
@@ -24,26 +27,28 @@
 
     
     .fifth-bg {
+        position: relative;
         background: url(../../../assets/background-squares-light.svg ) center / cover;
         
     }
 
     .third-bg{
         position: relative;
-    }
-
-
-    .third-bg::before{
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 95%;
         background: url(../../../assets/footer-bg.png) center / cover repeat-y;
-        z-index: 0;
-        transform: rotate(180deg);
     }
+
+
+    // .third-bg::before{
+    //     content: "";
+    //     position: absolute;
+    //     top: 0;
+    //     left: 0;
+    //     width: 100%;
+    //     height: 95%;
+    //     background: url(../../../assets/footer-bg.png) center / cover repeat-y;
+    //     z-index: 0;
+    //     transform: rotate(180deg);
+    // }
 
     app-we-are-home {
         display: flex;
@@ -56,6 +61,7 @@
     }
 
     .poster-container {
+        position: relative;
         margin: 0px 20px 20px 20px;
     }
 
@@ -106,6 +112,7 @@
     }
 
     .first-bg {
+        position: relative;
         h1 {
             font-weight: 700;
             font-size: $h3-font;
@@ -114,6 +121,7 @@
     }
 
     .second-bg {
+        position: relative;
         h1.grey {
             font-weight: 700;
             font-size: $md-font-p !important;
@@ -128,6 +136,7 @@
     }
 
     .fifth-bg {
+        position: relative;
         .media {
             margin: 10px;
         }
