--- a/src/app/shared/main-poster/main-poster.component.scss
+++ b/src/app/shared/main-poster/main-poster.component.scss
@@ -1,11 +1,31 @@
 @import '../../../variables';
 
+// .main-poster{
+//     background-image: url('../../../assets/main-poster.svg');
+//     text-align: center;
+//     border-radius: 40px;
+//     position: relative;
+//     z-index: 0;
+// }
+
+.main-poster::after{
+    content: "";
+    background-color: $bg-layer;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    border-radius: 40px;
+}
+
 .main-poster {
-    border-radius: 20px;
+    border-radius: 40px;
     padding: 40px;
     text-align: center;
     background-image: url('../../../assets/main-poster.svg');
-    background-color: $white;
+    background-color: $bg-layer;
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
@@ -81,13 +101,25 @@
 
 }
 
+.main-poster::after{
+    // content: "";
+    // background-color: $bg-layer;
+    // position: absolute;
+    // top: 0;
+    // left: 0;
+    // width: 100%;
+    // height: 100%;
+    // z-index: -2;
+    // border-radius: 40px;
+}
+
 
 .mobile-poster {
-    width: 100%;
-    background-position: 30% top;
-    background-size: inherit;
-    margin: 0px;
-    border-radius: 0px;
+    // width: 100%;
+    // background-position: 30% top;
+    // background-size: inherit;
+    // margin: 0px;
+    // border-radius: 0px !important;
 
     .main-desc {
         font-weight: 700;
