--- a/src/app/shared/mobile-navbar/mobile-navbar.component.scss
+++ b/src/app/shared/mobile-navbar/mobile-navbar.component.scss
@@ -29,17 +29,17 @@
 
 }
 
-
 .mobile-side-menu {
     padding-top: 40px;
     position: fixed;
-    top: 0;
-    left: 0;
+    top: 0px;
+    left: 0px;
     width: 100%;
     height: 100%;
     background: url('../../../assets/MILAYA-bg.svg') 80% /contain no-repeat, url('../../../assets/squares-mobile.svg') center center / cover;
     background-color: $mid-grey;
-    z-index: 999 !important;
+    z-index: 99999999 !important;
+    opacity: 1;
     display: block;
 
     ul.the-menu {
