--- a/src/app/shared/why-choose/why-choose.component.html
+++ b/src/app/shared/why-choose/why-choose.component.html
@@ -1,4 +1,4 @@
-<div class="why-choose container"  [ngClass]="{'mobile':isMobile}" >
+<div class="why-choose container" [ngClass]="{'mobile':isMobile}">
     <div class="upper-box">
         <div class="box">
             <span class="breadcrumb" [@fadeInFromLeft]>WHY CHOOSE MILAYA CAPITAL’S</span>
@@ -10,13 +10,14 @@
 
         <div class="spacer-div" *ngIf="!isMobile"></div>
     </div>
-    <div class="spacer-div"  *ngIf="!isMobile"></div>
+    <div class="spacer-div" *ngIf="!isMobile"></div>
     <div class="lower-box container ">
         <div class="arrow-div">
             <img [@fadeInFromTop2] class="long-arrow" src="../../../assets/long-arrow-right.svg" alt="arrow" />
         </div>
         <div class="text-div">
-            <h2 class="grey-p-small" [@fadeInFromTop3]>We keep you in interaction with many international corporate companies. In this
+            <h2 class="grey-p-small" [@fadeInFromTop3]>We keep you in interaction with many international corporate
+                companies. In this
                 way,
                 communication
                 opportunities increase and we enable access to more portfolios.</h2>
@@ -30,7 +31,8 @@
     <div class="why-choose-cards-div">
         <app-why-choose-card [@fadeInFromBottom1] [src]="'../../../assets/status-up.svg'" [title]="'Smart Solutions'"
             [description]="'All the innovations brought by technology will be with you in your work'"></app-why-choose-card>
-        <app-why-choose-card [@fadeInFromBottom2] [src]="'../../../assets/chart-line-up.svg'" [title]="'High Conversions'"
+        <app-why-choose-card [@fadeInFromBottom2] [src]="'../../../assets/chart-line-up.svg'"
+            [title]="'High Conversions'"
             [description]="'We will support you to get the best conversions from your investments'"></app-why-choose-card>
         <app-why-choose-card [@fadeInFromBottom3] [src]="'../../../assets/status-up.svg'" [title]="'High Conversions'"
             [description]="'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.'"></app-why-choose-card>
